syntax = "proto3";
option java_package = "com.exemple.reservation_rest.stubs";
option java_multiple_files = true;

message Reservation {
  int32 id = 1;
  int32 clientId = 2;
  int32 chambreId = 3;
  string dateDebut = 4;
  string dateFin = 5;
  string preferences = 6;
}

message CreateReservationRequest {
  int32 clientId = 1;
  int32 chambreId = 2;
  string dateDebut = 3;
  string dateFin = 4;
  string preferences = 5;
}

message UpdateReservationRequest {
  int32 id = 1;
  int32 clientId = 2;
  int32 chambreId = 3;
  string dateDebut = 4;
  string dateFin = 5;
  string preferences = 6;
}

message ReservationIdRequest {
  int32 id = 1;
}

message Empty {}

message ReservationList {
  repeated Reservation reservations = 1;
}

service ReservationService {
  rpc CreateReservation (CreateReservationRequest) returns (Reservation);
  rpc GetReservation (ReservationIdRequest) returns (Reservation);
  rpc UpdateReservation (UpdateReservationRequest) returns (Reservation);
  rpc DeleteReservation (ReservationIdRequest) returns (Empty);
  rpc GetAllReservations (Empty) returns (ReservationList);
}
